Updated project to fit JDK 11